@@ -1,3 +1,15 @@
+2016-10-26  Babak Shafiei  <bshafiei@apple.com>
+
+        Merge r207171. rdar://problem/28857503
+
+    2016-10-11  Daniel Bates  <dabates@apple.com>
+
+            Attempt to fix the Apple Internal Mac build following r207159
+            (https://bugs.webkit.org/show_bug.cgi?id=163244)
+
+            * UIProcess/API/Cocoa/WKWebView.mm:
+            (shouldRequireUserGestureToLoadVideo):
+
 2016-10-24  Matthew Hanson  <matthew_hanson@apple.com>
 
         Merge r206762. rdar://problem/28544885
